<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">License to Drive</string>
    <string name="app_desc" translatable="false">Eswatini Learner\'s Permit study app</string>
    <string name="app_title" translatable="false">License to Drive</string>
    <string name="app_title_description" translatable="false">App Title</string>
    <string name="app_exit_alert_title" translatable="false">Exit App?</string>
    <string name="app_exit_alert_confirm" translatable="false">Yes</string>
    <string name="app_exit_alert_decline" translatable="false">No</string>
    <string name="app_exit_alert_message" translatable="false">Would you like to exit the application?</string>
    <string name="game_logo_description" translatable="false">Learners Permit App Logo</string>
    <string name="splash_company_logo_video_description" translatable="false">Company logo splash screen video</string>
    <string name="choose_language_title" translatable="false">Choose a Study Language:</string>
    <string name="choose_language_title_description" translatable="false">Study language choice title</string>
    <string name="english_button" translatable="false">English</string>
    <string name="english_button_description" translatable="false">English language choice button</string>
    <string name="siswati_button" translatable="false">SiSwati</string>
    <string name="siswati_button_description" translatable="false">SiSwati language choice button</string>
    <string name="language_header" translatable="false">Language</string>
    <string name="language_title" translatable="false">Study language</string>
    <string name="language_summary" translatable="false">Choose a study language.</string>
    <string name="language_choice_navigation_error" translatable="false">It seems you have made an empty choice. Please contact the developer for more help.</string>
    <string name="learn_signs_title" translatable="false">Road Traffic Signs and Rules of the Road</string>
    <string name="learn_signs_title_description" translatable="false">Learn road traffic signs and rules of the road title</string>
    <string name="learn_button" translatable="false">Study Signs</string>
    <string name="learn_button_description" translatable="false">Study signs button</string>
    <string name="test_cards_title" translatable="false">Short Test</string>
    <string name="test_cards_title_description" translatable="false">Short test title</string>
    <string name="test_cards_prompt" translatable="false">Take a short random quiz to test yourself. There is no scoring, and you can take it as often as you want. \n\nSelect categories on which to be tested on.</string>
    <string name="test_cards_prompt_description" translatable="false">Short test prompt.</string>
    <string name="random_cards_button" translatable="false">Begin Test</string>
    <string name="test_cards_button" translatable="false">Test Cards</string>
    <string name="test_cards_button_description" translatable="false">Test cards button</string>
    <string name="test_cards_title_description_" translatable="false">Short test category</string>
    <string name="test_cards_title_regs_description" translatable="false">Test cards regulatory signs title</string>
    <string name="test_cards_title_ws_description" translatable="false">Test cards warning signs title</string>
    <string name="test_cards_title_gois_description" translatable="false">Test cards guide or information signs title</string>
    <string name="test_cards_title_rm_description" translatable="false">Test cards road markings title</string>
    <string name="test_cards_title_rs_description" translatable="false">Test cards road signals title</string>
    <string name="test_cards_title_rotr_description" translatable="false">Test cards rule of the road title</string>
    <string name="test_cards_progressbar_description" translatable="false">Test progress</string>
    <string name="controls_linearlayout_previous_button" translatable="false">Previous</string>
    <string name="controls_linearlayout_next_button" translatable="false">Next</string>
    <string name="controls_linearlayout_next_button_done" translatable="false">Done</string>
    <string name="controls_linearlayout_previous_button_description" translatable="false">Previous question button</string>
    <string name="controls_linearlayout_next_button_description" translatable="false">Next question button</string>
    <string name="back_navigation_attempt" translatable="false">You cannot navigate back from the test!</string>
    <string name="back_navigation_attempt_done" translatable="false">You cannot navigate back, click done to return to the main menu.</string>
    <string name="start_test_navigation_error" translatable="false">Please select a topic to get tested on.</string>
    <string name="scored_test_button" translatable="false">Scored Test</string>
    <string name="scored_test_button_description" translatable="false">Scored test button</string>
    <string name="back_navigation_attempt_exam" translatable="false">You cannot navigate back from the test!</string>
    <string name="scored_test_begin_button" translatable="false">Begin Test</string>
    <string name="scored_test_prompt" translatable="false">This is a longer test of your knowledge of the road traffic signs and markings, as well as the rules of the road. There are 30 questions in total, so give yourself ample time to answer them all. They have been selected randomly from every topic to ensure that every part is tested. These are mulitple choice questions. \n\nThere is scoring, so try your best!</string>
    <string name="scored_test_prompt_description" translatable="false">Scored test prompt.</string>
    <string name="scored_test_title" translatable="false">Scored Test</string>
    <string name="scored_test_title_description" translatable="false">Scored test title</string>
    <string name="scored_test_progressbar_description" translatable="false">Scored test progress</string>
    <string name="st_controls_linearlayout_next_button" translatable="false">Next</string>
    <string name="st_controls_linearlayout_submit_button" translatable="false">Complete Test</string>
    <string name="st_controls_linearlayout_next_button_description" translatable="false">Complete the scored test button</string>
    <string name="radio_button_description" translatable="false">Multiple choice response</string>
    <string name="radio_button" translatable="false">Radio button choice</string>
    <string name="question_right_answer" translatable="false">This is right.</string>
    <string name="submit_navigation_error_exam" translatable="false">Cannot submit a response until you select a value.</string>
    <string name="done_title_description" translatable="false">Text complete title</string>
    <string name="done_title_text" translatable="false">Test Complete</string>
    <string name="done_content_text" translatable="false">You scored x in the test/exam.</string>
    <string name="done_content_description" translatable="false">Completed test main text body.</string>
    <string name="done_button_text" translatable="false">Main Menu</string>
    <string name="done_button" translatable="false">Test complete button or navigate to main menu button</string>
    <string name="settings_button" translatable="false">Settings</string>
    <string name="settings_button_description" translatable="false">Settings button</string>
    <string name="app_settings_alert_title" translatable="false">Save Settings</string>
    <string name="app_settings_alert_message" translatable="false">Would you like to save your settings before exiting this screen?</string>
    <string name="app_settings_alert_confirm" translatable="false">Save</string>
    <string name="app_settings_alert_decline" translatable="false">Discard</string>
    <string name="settings_title_description" translatable="false">Settings title</string>
    <string name="settings_title" translatable="false">Settings</string>
    <string name="settings_save_button_description" translatable="false">Save button</string>
    <string name="settings_save_button" translatable="false">Save</string>
    <string name="settings_discard_button_description" translatable="false">Discard button</string>
    <string name="settings_discard_button" translatable="false">Discard</string>
    <string name="language_radio_button_description" translatable="false">Language option</string>
    <string name="language_settings_title_description" translatable="false">Choose a language title</string>
    <string name="language_settings_title" translatable="false">Choose a language</string>
    <string name="rules_of_the_road">Rules of the Road</string>
    <string name="rules_of_the_road_title_description" translatable="false">Rules of the road title</string>
    <string name="road_traffic_signs_and_markings">Road Traffic Signs and Markings</string>
    <string name="regulatory_signs">Regulatory Signs</string>
    <string name="regulatory_signs_title_description" translatable="false">Regulatory signs title</string>
    <string name="warning_signs">Warning Signs</string>
    <string name="warning_signs_title_description" translatable="false">Warning signs title</string>
    <string name="guide_or_information_signs">Guide or Information Signs</string>
    <string name="guide_or_information_signs_title_description" translatable="false">Guide or information signs title</string>
    <string name="road_markings">Road Markings</string>
    <string name="road_markings_title_description" translatable="false">Road markings title</string>
    <string name="road_signals">Road Signals</string>
    <string name="road_signals_title_description" translatable="false">Road signals title</string>
    <string name="rules_of_the_road_01_Q">What is the first rule of the road?</string>
    <string name="rules_of_the_road_01_A">Drive on the left hand side, pass the right hand side.</string>
    <string name="rules_of_the_road_02_Q">What is the permitted speed of travel on the road?</string>
    <string name="rules_of_the_road_02_A">It is dependent on the area and section of the road that I am driving on.</string>
    <string name="rules_of_the_road_03_Q">What are you supposed to do when people and animals cross the road infront of you?</string>
    <string name="rules_of_the_road_03_A">You are supposed to check your mirrors for traffic, stop, give the people or animal a chance to pass, and then continue driving.</string>
    <string name="rules_of_the_road_04_Q">In which areas are you supposed to drive with caution?</string>
    <string name="rules_of_the_road_04_A">i. Mist
        \nii. Heavy Rain
        \niii. Slippery road (e.g. heavy rain, oil spills, etc)
        \niv. Dust clouds
        \nv. At Night</string>
    <string name="rules_of_the_road_05_Q">What are you supposed to do when preparing to overtake?</string>
    <string name="rules_of_the_road_05_A">i.	Check the mirrors and look ahead for traffic and obstructions
        \nii.	Confirm or be sure that the rules of the road permit me to overtake
        \niii.	Check the mirrors again for traffic and obstructions to make certain that the way is clear for me to overtake
        \niv.	Make a signal that you will be overtaking on the right (use hand signals or use the right indicator), then over take
        \nv.	Check your mirros for traffic and obstructions,make a signal that you intend to return to your lane (left indicator or use a hand signal), if the way is clear, return to your lane</string>
    <string name="rules_of_the_road_06_Q">Name seven (7) places where you are not supposed to overtake?</string>
    <string name="rules_of_the_road_06_A">i.	Cross-road
        \nii.	Blind rise
        \niii.	One vehicle bridge
        \niv.	Zebra or pedestrian crossing
        \nv.	Robots
        \nvi.	Sharp corners
        \nvii.	T-junction</string>
</resources>