<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".Done">

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/done_button"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/done_button_text"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/done_content" />

    <TextView
        android:id="@+id/done_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/done_content_description"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/done_content_text"
        android:textAlignment="center"
        android:textDirection="ltr"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/done_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/done_title" />

    <TextView
        android:id="@+id/done_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/done_title_description"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/done_title_text"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textDirection="ltr"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/done_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>