<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:visibility="visible"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="@dimen/main_menu_title_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/title_margin"
        android:layout_marginBottom="@dimen/title_margin_bottom"
        android:contentDescription="@string/app_title_description"
        android:gravity="center_horizontal"
        android:layoutDirection="ltr"
        android:padding="@dimen/title_padding"
        android:singleLine="false"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textDirection="ltr"
        android:textSize="@dimen/title_text_size"
        android:visibility="visible"
        app:autoSizeMaxTextSize="22dp"
        app:autoSizeMinTextSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/options_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/options_padding"
        android:textDirection="ltr"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title">

        <Button
            android:id="@+id/learn"
            android:layout_width="@dimen/main_menu_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/main_menu_button_margin"
            android:layout_weight="@dimen/common_weight"
            android:description="@string/learn_button_description"
            android:gravity="center_horizontal|center_vertical"
            android:padding="@dimen/main_menu_button_padding"
            android:text="@string/learn_button"
            android:textAlignment="center"
            android:textSize="@dimen/main_menu_button_text_size"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/test_cards"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/test_cards"
            android:layout_width="@dimen/main_menu_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/main_menu_button_margin"
            android:layout_weight="@dimen/common_weight"
            android:description="@string/test_cards_button_description"
            android:gravity="center_horizontal|center_vertical"
            android:padding="@dimen/main_menu_button_padding"
            android:text="@string/test_cards_button"
            android:textAlignment="center"
            android:textSize="@dimen/main_menu_button_text_size"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/scored_test"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/learn" />

        <Button
            android:id="@+id/scored_test"
            android:layout_width="@dimen/main_menu_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/main_menu_button_margin"
            android:layout_weight="@dimen/common_weight"
            android:description="@string/scored_test_button_description"
            android:gravity="center_horizontal|center_vertical"
            android:padding="@dimen/main_menu_button_padding"
            android:text="@string/scored_test_button"
            android:textAlignment="center"
            android:textSize="@dimen/main_menu_button_text_size"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/test_cards" />

        <Button
            android:id="@+id/settings"
            android:layout_width="@dimen/main_menu_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/main_menu_button_margin"
            android:layout_weight="@dimen/common_weight"
            android:description="@string/settings_button_description"
            android:gravity="center_horizontal|center_vertical"
            android:padding="@dimen/main_menu_button_padding"
            android:text="@string/settings_button"
            android:textAlignment="center"
            android:textSize="@dimen/main_menu_button_text_size"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scored_test" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>