<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/progress_bar_tct"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/test_cards_progressbar_description"
        android:max="10"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/card_stack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AdapterViewFlipper
        android:id="@+id/card_stack"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:textAlignment="center"
        android:textDirection="ltr"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/controls_linearlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar_tct"
        tools:visibility="visible" />
    <LinearLayout
        android:id="@+id/controls_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/card_stack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <Button
            android:id="@+id/controls_linearlayout_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/controls_linearlayout_previous_button_description"
            android:padding="2dp"
            android:text="@string/controls_linearlayout_previous_button"/>
        <Button
            android:id="@+id/controls_linearlayout_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/controls_linearlayout_next_button_description"
            android:padding="2dp"
            android:text="@string/controls_linearlayout_next_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>