<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".ScoredTest">
    <TextView
        android:id="@+id/scored_test_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/title_margin"
        android:layout_marginBottom="@dimen/title_margin_bottom"
        android:contentDescription="@string/scored_test_title_description"
        android:gravity="center_horizontal"
        android:padding="@dimen/title_padding"
        android:text="@string/scored_test_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textDirection="ltr"
        android:visibility="visible"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toTopOf="@+id/scored_test_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/scored_test_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/exam_prompt_margin"
        android:layout_marginBottom="@dimen/exam_prompt_margin_bottom"
        android:contentDescription="@string/scored_test_prompt_description"
        android:gravity="center_horizontal"
        android:padding="@dimen/exam_prompt_padding"
        android:text="@string/scored_test_prompt"
        android:textSize="@dimen/exam_prompt_text_size"
        android:textColor="@color/black"
        android:textDirection="ltr"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/scored_test_begin_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scored_test_title" />
    <Button
        android:id="@+id/scored_test_begin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/exam_menu_button_margin"
        android:padding="@dimen/exam_menu_button_padding"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/scored_test_begin_button"
        android:textSize="@dimen/exam_menu_button_text_size"
        android:textAlignment="center"
        android:textDirection="ltr"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scored_test_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>